modules/alb/alb_listner.tf
resource "aws_lb_listener" "my-test-alb-listner" {
  load_balancer_arn = "aws_lb.my-aws-alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.my-target-group.arn
  }
}
